--- a/HDB Resale Data_GitHub.ipynb
+++ b/HDB Resale Data_GitHub.ipynb
@@ -4,32 +4,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> Introduction </b>\n",
-    "---\n",
-    "Hi there, today I will be diving into the HDB Resale Dataset (Jan 2017-2020) available to the public through HDB-Data.gov.sg \n",
-    "\n",
-    "Homeownership is a milestone that almost everyone in Singapore will have to go through. Given that the most viable route to home ownership in Singapore is getting your own HDB is through BTO or Resale, I would wager that this would be a matter of importance to all. \n",
-    "\n",
-    "We are fortunate enough to live in a time where data tools such as Python are available to make research easier compared to the days of old for the code-literate members of the public to use various tools to visualize and answer questions with the data sets provided. The following is a exercise of my middling Python skills and a showcase of what is possible if one is willing to delve deep. \n",
-    "\n",
-    "\n",
-    "<b>Dataset Used:</b>\n",
-    "\n",
-    "- HDB Resale Data from January 2017 to June 2020 (Adapted from [data.gov.sg](https://data.gov.sg/dataset/resale-flat-prices))\n",
-    "\n"
+    "# Synposis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We begin by setting up the foundation for our analysis, loading our modules, importing and cleaning our data set.\n",
+    "The aim of this exercise is to determine what benchmarks and their associated averages  that can be established from the dataset that would be useful to a potential HDB buyer for evaulateing the cost/value proposition of a flat in a given town. \n",
+    "\n",
+    "For reasons detailed further in this Notebook, these benchmark metrics were applied to 3/4/5 room flats across 6 towns with the highest transactional value where these flats were grouped under within the dataset. \n",
+    "\n",
+    "Drilling down further - the exercise decided on narrow down on the benchmark metrics for 4 room flats within these 6 towns as part of a hypothetical scenario for a homebuyer wishing to compare the value/cost proposition in these 6 towns.\n",
+    "\n",
+    "<b>Dataset Used:</b>\n",
+    "- HDB Resale Data from January 2017 to June 2020 (Adapted from [data.gov.sg](https://data.gov.sg/dataset/resale-flat-prices))\n",
     "\n",
     "<b>Modules Used:</b>\n",
     "- pandas\n",
     "- numpy\n",
     "- matplotlib\n",
     "- csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b> Introduction - The HDB's Buyer Headache </b>\n",
+    "---\n",
+    "Hi there, I will be diving into the HDB Resale Dataset (Jan 2017-2020) available to the public through HDB-Data.gov.sg \n",
+    "\n",
+    "Homeownership is a milestone that almost everyone in Singapore will have to go through. Given that the most viable route to home ownership in Singapore is getting your own HDB is through BTO or Resale, I would wager that this would be a matter of importance to all. But to someone who is not in the secondary real estate market, where can one start get objective data to find out what is the average price for a flat in a certain area? \n",
+    "\n",
+    "We are fortunate enough to live in a time where data tools such as Python are available to make research easier compared to the days of old for the code-literate members of the public to use various tools to visualize and answer questions with the data sets provided. We are eqaully fortunate that the Singapore Govt has released its HDB resale dataset to the public, thereby allowing such analysis take place. The following is a exercise of my middling Python skills and a showcase of what is possible if one is willing to get their hands dirty. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We begin by setting up the foundation for our analysis, loading our modules, importing and cleaning our data set. \n",
+    "\n",
+    "<b>The code can be toggled on and off for ease of reading by clicking the tabe in the next line.</b>\n",
+    "\n"
    ]
   },
   {
@@ -40,151 +58,23 @@
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>month</th>\n",
-       "      <th>town</th>\n",
-       "      <th>flat_type</th>\n",
-       "      <th>block</th>\n",
-       "      <th>street_name</th>\n",
-       "      <th>storey_range</th>\n",
-       "      <th>floor_area_sqm</th>\n",
-       "      <th>flat_model</th>\n",
-       "      <th>lease_commence_date</th>\n",
-       "      <th>remaining_lease</th>\n",
-       "      <th>resale_price</th>\n",
-       "      <th>address</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Latitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>2 ROOM</td>\n",
-       "      <td>406</td>\n",
-       "      <td>ANG MO KIO AVE 10</td>\n",
-       "      <td>10 TO 12</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>Improved</td>\n",
-       "      <td>1979</td>\n",
-       "      <td>61</td>\n",
-       "      <td>232000.0</td>\n",
-       "      <td>406 ANG MO KIO AVE 10</td>\n",
-       "      <td>103.853880</td>\n",
-       "      <td>1.362005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>3 ROOM</td>\n",
-       "      <td>108</td>\n",
-       "      <td>ANG MO KIO AVE 4</td>\n",
-       "      <td>01 TO 03</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>New Generation</td>\n",
-       "      <td>1978</td>\n",
-       "      <td>60</td>\n",
-       "      <td>250000.0</td>\n",
-       "      <td>108 ANG MO KIO AVE 4</td>\n",
-       "      <td>103.838202</td>\n",
-       "      <td>1.370966</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>3 ROOM</td>\n",
-       "      <td>602</td>\n",
-       "      <td>ANG MO KIO AVE 5</td>\n",
-       "      <td>01 TO 03</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>New Generation</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>62</td>\n",
-       "      <td>262000.0</td>\n",
-       "      <td>602 ANG MO KIO AVE 5</td>\n",
-       "      <td>103.835368</td>\n",
-       "      <td>1.380709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>3 ROOM</td>\n",
-       "      <td>465</td>\n",
-       "      <td>ANG MO KIO AVE 10</td>\n",
-       "      <td>04 TO 06</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>New Generation</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>62</td>\n",
-       "      <td>265000.0</td>\n",
-       "      <td>465 ANG MO KIO AVE 10</td>\n",
-       "      <td>103.857201</td>\n",
-       "      <td>1.366201</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>3 ROOM</td>\n",
-       "      <td>601</td>\n",
-       "      <td>ANG MO KIO AVE 5</td>\n",
-       "      <td>01 TO 03</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>New Generation</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>62</td>\n",
-       "      <td>265000.0</td>\n",
-       "      <td>601 ANG MO KIO AVE 5</td>\n",
-       "      <td>103.835132</td>\n",
-       "      <td>1.381041</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "<script>\n",
+       "code_show=true; \n",
+       "function code_toggle() {\n",
+       "if (code_show){\n",
+       "$('div.input').hide();\n",
+       "} else {\n",
+       "$('div.input').show();\n",
+       "}\n",
+       "code_show = !code_show\n",
+       "} \n",
+       "$( document ).ready(code_toggle);\n",
+       "</script>\n",
+       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"This documment is written in a Jupyter notebook and the code used to produce these analyses has been hidden for ease of reading.  \n",
+       "To make the code visiable click here\"></form>"
       ],
       "text/plain": [
-       "     month        town flat_type block        street_name storey_range  \\\n",
-       "0  2017-01  ANG MO KIO    2 ROOM   406  ANG MO KIO AVE 10     10 TO 12   \n",
-       "1  2017-01  ANG MO KIO    3 ROOM   108   ANG MO KIO AVE 4     01 TO 03   \n",
-       "2  2017-01  ANG MO KIO    3 ROOM   602   ANG MO KIO AVE 5     01 TO 03   \n",
-       "3  2017-01  ANG MO KIO    3 ROOM   465  ANG MO KIO AVE 10     04 TO 06   \n",
-       "4  2017-01  ANG MO KIO    3 ROOM   601   ANG MO KIO AVE 5     01 TO 03   \n",
-       "\n",
-       "   floor_area_sqm      flat_model lease_commence_date  remaining_lease  \\\n",
-       "0            44.0        Improved                1979               61   \n",
-       "1            67.0  New Generation                1978               60   \n",
-       "2            67.0  New Generation                1980               62   \n",
-       "3            68.0  New Generation                1980               62   \n",
-       "4            67.0  New Generation                1980               62   \n",
-       "\n",
-       "   resale_price                address   Longitude  Latitude  \n",
-       "0      232000.0  406 ANG MO KIO AVE 10  103.853880  1.362005  \n",
-       "1      250000.0   108 ANG MO KIO AVE 4  103.838202  1.370966  \n",
-       "2      262000.0   602 ANG MO KIO AVE 5  103.835368  1.380709  \n",
-       "3      265000.0  465 ANG MO KIO AVE 10  103.857201  1.366201  \n",
-       "4      265000.0   601 ANG MO KIO AVE 5  103.835132  1.381041  "
+       "<IPython.core.display.HTML object>"
       ]
      },
      "execution_count": 1,
@@ -193,6 +83,7 @@
     }
    ],
    "source": [
+    "from IPython.display import HTML\n",
     "#Loading\n",
     "%matplotlib inline\n",
     "import warnings\n",
@@ -244,7 +135,22 @@
     "      \n",
     "hdb_resale_df = pd.DataFrame(hdb_resale_listings, columns = hdb_resale_listings_headers)\n",
     "\n",
-    "hdb_resale_df.head()"
+    "hdb_resale_df.head()\n",
+    "\n",
+    "HTML('''<script>\n",
+    "code_show=true; \n",
+    "function code_toggle() {\n",
+    "if (code_show){\n",
+    "$('div.input').hide();\n",
+    "} else {\n",
+    "$('div.input').show();\n",
+    "}\n",
+    "code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
+    "</script>\n",
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"This documment is written in a Jupyter notebook and the code used to produce these analyses has been hidden for ease of reading.  \n",
+    "To make the code visiable click here\"></form>''')\n"
    ]
   },
   {
@@ -374,7 +280,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -550,8 +458,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Flat Type Distribution\n",
-    "4-Room flats dominate the with 3-Rooms and 5-Rooms taking a equal share. Knowing this, we can narrow our focus on to these flat types according to 3 characteristics that most homebuyers are interested in: Price, Lease Remaining and Floor Area SQM.  "
+    "# Flat Type Distribution and our Metrics for Benchmarking\n",
+    "4-Room flats dominate the with 3-Rooms and 5-Rooms taking a equal share. Knowing this, we can narrow our focus on to these flat types according to 3 characteristics found in our dataset that most homebuyers are interested in to form our benchmark metrics for comparison: <b>Price, Lease Remaining and Floor Area SQM</b>. \n",
+    "\n",
+    "Qualitative factors such as location and nearby amentities may and will impact the measure of these metrics for certain data points and it is out of this exercise's purview to account for these.   "
    ]
   },
   {
@@ -654,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -723,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1120,7 @@
        "YISHUN                 2719  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1134,7 @@
    "metadata": {},
    "source": [
     "# Concluding thoughts\n",
-    "The data is not so cleanly formated, but for a off the cuff query, it works. The questions one can ask and the multitude of answers that can be derived from this dataset, let alone others, is staggering, given that I was only looking at just 3 points of interest. If you have the right questions and the know how to get them, it goes without saying that a lot of insight can be gained for a fraction of the time spent. \n",
+    "The data is not so cleanly formated, but as a off the cuff query, it works. The questions one can ask and the multitude of answers that can be derived from this dataset, let alone others, is staggering, given that I was only looking at just 3 points of interest. For example, if you wish to see the price trend for 5 room flats across a yearly time period, one can do so. If you have the right questions and the know how to get them, it goes without saying that a lot of insight can be gained for a fraction of the time spent. \n",
     "\n",
     "The best part of it is all of this is repeatable! \n",
     "\n",
