--- a/HDB Resale Data_GitHub.ipynb
+++ b/HDB Resale Data_GitHub.ipynb
@@ -71,7 +71,7 @@
        "$( document ).ready(code_toggle);\n",
        "</script>\n",
        "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"This documment is written in a Jupyter notebook and the code used to produce these analyses has been hidden for ease of reading.  \n",
-       "To make the code visiable click here\"></form>"
+       "To make the code visible click here\"></form>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
